--- a/index.html
+++ b/index.html
@@ -1,18 +1,92 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
+<head><meta charset="utf-8">
 
 <!-- Load d3.js -->
 <script src="https://d3js.org/d3.v4.js"></script>
+<script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
+<title>Drug Overdose Deaths in the United States</title>
+
+<style>
+p {
+ text-align:left;
+ font-size: 16px;
+ margin: 0;
+ position: absolute;
+ top: 10%;
+ left: 27%;
+}
+
+h1 {
+ text-align:center
+}
+
+.center {
+  margin: 0;
+  position: absolute;
+  top: 65%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.middle1 {
+  margin: 0;
+  position: absolute;
+  top: 30%;
+  left: 47%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.middle2 {
+  margin: 0;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.middle3 {
+  margin: 0;
+  position: absolute;
+  top: 30%;
+  left: 53%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+</style>
+
+</head>
+<body>
+<h1 style="font-family:verdana">Drug Overdose Deaths in the United States, 2017-2019</h1>
+<p style="font-family:verdana">
+According to CDC's report, "nearly 841,000 people have died since 1999 from a drug overdose".
+<br>Drug-related problems have become one of the most important public health concerns in the United States.
+<br>In 2017, 73,997 drug overdose deaths occurred across all states in the U.S. The number of drug overdose
+<br>deaths in the U.S. has remained high in 218 and increased in 2019.
+<br>
+<br>The following visualization demonstrates the annual deaths in each state between 2017 to 2019. Click the
+<br> year button to explore the story for every year.
+<br>
+<br>Drug overdose data for this visualization was accessed from CDC WONDER site.
+<br>
+</p>
+</body>
+
+<!-- Add 3 buttons -->
+<button class = "middle1" onclick="update('overdose_2017')">2017</button>
+<button class = "middle2" onclick="update('overdose_2018')">2018</button>
+<button class = "middle3" onclick="update('overdose_2019')">2019</button>
+
 
 <!-- Create a div where the graph will take place -->
-<div id="my_dataviz"></div>
+<div id="my_dataviz" class="center"></div>
+
 
 <script>
-
 // set the dimensions and margins of the graph
-var margin = {top: 10, right: 30, bottom: 40, left: 50},
-    width = 520 - margin.left - margin.right,
-    height = 520 - margin.top - margin.bottom;
+var margin = {top: 10, right: 30, bottom: 70, left: 60},
+    width = 1200 - margin.left - margin.right,
+    height = 500 - margin.top - margin.bottom;
 
 // append the svg object to the body of the page
 var svg = d3.select("#my_dataviz")
@@ -21,72 +95,145 @@ var svg = d3.select("#my_dataviz")
     .attr("height", height + margin.top + margin.bottom)
   .append("g")
     .attr("transform",
-          "translate(" + margin.left + "," + margin.top + ")")
+          "translate(" + margin.left + "," + margin.top + ")");
 
-// Add the grey background that makes ggplot2 famous
-svg
-  .append("rect")
-    .attr("x",0)
-    .attr("y",0)
-    .attr("height", height)
-    .attr("width", height)
-    .style("fill", "EBEBEB")
 
-//Read the data
-d3.csv("https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/iris.csv", function(data) {
-
-  // Add X axis
-  var x = d3.scaleLinear()
-    .domain([4*0.95, 8*1.001])
+// A function that create / update the plot for a given variable:
+function update(selectedVar) {
+  svg.selectAll("*").remove();
+  // Initialize the X axis
+  var x = d3.scaleBand()
     .range([ 0, width ])
-  svg.append("g")
+    .padding(0.2);
+  var xAxis = svg.append("g")
     .attr("transform", "translate(0," + height + ")")
-    .call(d3.axisBottom(x).tickSize(-height*1.3).ticks(10))
-    .select(".domain").remove()
 
-  // Add Y axis
+  // Initialize the Y axis
   var y = d3.scaleLinear()
-    .domain([-0.001, 9*1.01])
-    .range([ height, 0])
-    .nice()
-  svg.append("g")
-    .call(d3.axisLeft(y).tickSize(-width*1.3).ticks(7))
-    .select(".domain").remove()
+    .domain([0,7000])
+    .range([ height, 0]);
+  var yAxis = svg.append("g")
+    .attr("class", "myYaxis")
 
-  // Customization
-  svg.selectAll(".tick line").attr("stroke", "white")
+  // Parse the Data
+  d3.csv("https://raw.githubusercontent.com/LunaXia/vizopioid/main/data/us_drugoverdose.csv", function(data) {
 
-  // Add X axis label:
-  svg.append("text")
-      .attr("text-anchor", "end")
-      .attr("x", width/2 + margin.left)
-      .attr("y", height + margin.top + 20)
-      .text("Sepal Length");
+    // X axis
+    x.domain(data.map(function(d) { return d.state; }))
+    xAxis.call(d3.axisBottom(x)).selectAll("text")
+        .style("text-anchor", "end")
+        .attr("dx", "-.8em")
+        .attr("dy", ".15em")
+        .attr("transform", "rotate(-65)");
 
-  // Y axis label:
-  svg.append("text")
-      .attr("text-anchor", "end")
-      .attr("transform", "rotate(-90)")
-      .attr("y", -margin.left + 20)
-      .attr("x", -margin.top - height/2 + 20)
-      .text("Petal Length")
+    // Add Y axis
+    y.domain([0, 7000]);
+    yAxis.call(d3.axisLeft(y));
 
-  // Color scale: give me a specie name, I return a color
-  var color = d3.scaleOrdinal()
-    .domain(["setosa", "versicolor", "virginica" ])
-    .range([ "#F8766D", "#00BA38", "#619CFF"])
+    // variable u: map data to existing bars
+    var u = svg.selectAll("rect")
+      .data(data)
 
-  // Add dots
-  svg.append('g')
-    .selectAll("dot")
-    .data(data)
-    .enter()
-    .append("circle")
-      .attr("cx", function (d) { return x(d.Sepal_Length); } )
-      .attr("cy", function (d) { return y(d.Petal_Length); } )
-      .attr("r", 5)
-      .style("fill", function (d) { return color(d.Species) } )
+    // update bars
+    u
+      .enter()
+      .append("rect")
+      .merge(u)
+        .attr("x", function(d) { return x(d.state); })
+        .attr("width", x.bandwidth())
+        .attr("y",418)
+        .attr("height", 2)
+        .transition()
+        .duration(1000)
+        .attr("y", function(d) { return y(d[selectedVar]); })
+        .attr("height", function(d) { return height-y(d[selectedVar]); })
+        .attr("fill", "#404080")
+        .style("opacity", 0.6)
 
-})
+      if (selectedVar == "overdose_2017"){
+        var annotations = [
+            {
+              note: {
+                label: "In 2017, 5302 drug overdose deaths occurred in California and that is the highest among nationwide.",
+                title: "Drug Overdose in Pennsylvania",
+                align: "middle",  // try right or left
+                wrap: 250,  // try something smaller to see text split in several lines
+                padding: 10   // More = text lower
+              },
+              connector: {
+                end: "dot" // 'dot' also available
+              },
+              color: ["#69b3a2"],
+              x: 837,
+              y: 130,
+              dy: -50,
+              dx: 140
+            }
+          ]
+
+        // Add annotation to the chart
+        var makeAnnotations = d3.annotation().annotations(annotations)
+        svg.append("g").call(makeAnnotations)
+
+        }
+
+        if (selectedVar == "overdose_2018"){
+          var annotations = [
+              {
+                note: {
+                  label: "In 2018, drug overdose deaths decreased in the northeast region (e.g., Pennsylvania, Ohio) that have highest drug overdoes deaths in the previous year. During the same year, drug overdose deaths in the Midwestern Region increased. The increase rate in Missouri was the highest in 2018. ",
+                  title: "Drug Overdose in Missouri",
+                  align: "middle",  // try right or left
+                  wrap: 250,  // try something smaller to see text split in several lines
+                  padding: 10   // More = text lower
+                },
+                connector: {
+                  end: "dot" // 'dot' also available
+                },
+                color: ["#69b3a2"],
+                x: 555,
+                y: 340,
+                dy: -120,
+                dx: 10
+              }
+            ]
+
+            // Add annotation to the chart
+          var makeAnnotations = d3.annotation().annotations(annotations)
+          svg.append("g").call(makeAnnotations)
+
+          }
+
+          if (selectedVar == "overdose_2019"){
+            var annotations = [
+                {
+                  note: {
+                    label: "In 2019, drug overdose deaths increased rapidly in California. California had the highest drug overdose deaths in 2018 -- 6,668 deaths. ",
+                    title: "Drug Overdose in California",
+                    align: "middle",  // try right or left
+                    wrap: 350,  // try something smaller to see text split in several lines
+                    padding: 10   // More = text lower
+                  },
+                  connector: {
+                    end: "dot" // 'dot' also available
+                  },
+                  color: ["#69b3a2"],
+                  x: 100,
+                  y: 75,
+                  dy: -0.1,
+                  dx: 190
+                }
+              ]
+
+              // Add annotation to the chart
+            var makeAnnotations = d3.annotation().annotations(annotations)
+            svg.append("g").call(makeAnnotations)
+
+            }
+  })
+}
+
+// Initialize plot
+update('overdose_2019')
 
 </script>
