--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@ function update(selectedVar) {
         .attr("width", x.bandwidth())
         .attr("height", 2)
         .transition()
+        .duration(100)
         .attr("y", d => y(d[selectedVar]))
         .attr("height", d => height - y(d[selectedVar]))
         .attr("fill", "#404080")
