--- a/index.html
+++ b/index.html
@@ -135,12 +135,11 @@ function update(selectedVar) {
     // update bars
     u.join("rect")
         .attr("x", d => x(d.state))
-        //.attr("y", 418)
+        .attr("y", 418)
         .attr("width", x.bandwidth())
-        //.attr("height", 2)
-        //.transition()
-        //.duration(1000)
-        .delay(500)
+        .attr("height", 2)
+        .transition()
+        .duration(1000)
         .attr("y", d => y(d[selectedVar]))
         .attr("height", d => height - y(d[selectedVar]))
         .attr("fill", "#404080")
