--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@ According to CDC's report, "nearly 841,000 people have died since 1999 from a dr
 <br>In 2017, 73,997 drug overdose deaths occurred across all states in the U.S. The number of drug overdose
 <br>deaths in the U.S. has remained high in 218 and increased in 2019.
 <br>
-<br>The following visualization demonstrates the annual deaths in each state between 2017 to 2019. Click the
-<br> year button to explore the story for every year.
-<br>
+<br>The following visualization demonstrates the annual deaths in each state between 2017 to 2019.
 <br>Drug overdose data for this visualization was accessed from CDC WONDER site.
+<br>
+<br>Click the year button to explore the story (change slide) for every year.
 <br>
 </p>
 </body>
